# dos14--zhuravel_dmitriy-git-flow

./: .gitignore  Dockerfile  Dockerfile.nginx  Jenkinsfile  README.md  account.csv  account_temp.csv  bank.py  classes.py  credit.json  credits_deposits.json  credits_deposits.yaml  deposit.yaml  docker-compose.yml  main.py  main_hw19.py  main_hw19_test.py  main_zdo.py  pyproject.toml  test.py
ansible/: global_vars.yaml  inventory.yaml
ansible/roles/start_app/templates/: authn.service.j2
ansible/roles/start_app/vars/: main.yaml
config/: __init__.py
data/: credits_deposits.yaml
helm_CD/argoCD/: application.yaml  project.yaml
helm_CD/bank/: Chart.yaml  values.yaml  values_prd.yaml
helm_CD/bank/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
new_project/: README.md
nginx/: nginx.conf
